--- a/Game/game.css
+++ b/Game/game.css
@@ -1,20 +1,54 @@
+/* Game */
+#game {
+	width: 600px;
+	margin: auto;
+	text-align: center;
+}
+
+/* Tableau */
 table {
 	border-collapse: collapse;
+	margin: auto;
 }
+
 td {
 	width: 50px;
 	height: 50px;
 	border: 1px solid black;
 	text-align: center;
-	background: silver;
 }
 
-td div{
+tr:nth-child(odd) td:nth-child(odd), tr:nth-child(even)  td:nth-child(even) {
+	background: #F9BE9C;
+	/* background: rgb(200,200,200); */
+}
+
+tr:nth-child(odd) td:nth-child(even), tr:nth-child(even)  td:nth-child(odd) {
+	background: #6C2C07;
+	/* background: rgb(220,220,220); */
+}
+
+tr td.focus {
+	background: rgba(255, 128, 0, 0.8) !important;
+	cursor: pointer;
+}
+
+tr td.focus:hover {
+	background: rgba(255, 128, 0, 1) !important;
+	cursor: pointer;
+}
+
+/* Token */
+td div {
 	width: 40px; 
 	height: 40px; 
 	border-radius: 100%;
 	margin: auto ;
 	border: 1px solid black;
+}
+
+td div:hover {
+	cursor: pointer;
 }
 
 td div[data-color="black"] {
@@ -30,6 +64,22 @@ td div[data-type="queen"] {
 	border: 10px double red;
 }
 
-td.focus {
-	background: gray;
+td div[data-type="queen"] {
+	width: 25px;
+	height: 25px;
+	border: 10px double red;
+}
+
+/* Section des joueurs */
+#players ul {
+	display: inline-block;
+	padding: 1em 2em;
+	margin: 1em 2em;
+	border: 1px solid transparent;
+	text-align: left;
+}
+
+#players ul.current {
+	background: rgb(230,230,230);
+	border: 1px solid black;
 }
